# pyrosm

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  MANIFEST.in  Makefile  README.md  RELEASING.md  environment.yml  index.html  make.bat  pyproject.toml  setup.py
benchmarks/: README.md  benchmarks.ipynb  memory_benchmark.py  memory_results.md  osmextract_benchmark.ipynb  osmextract_results.csv
ci/: 310-conda.yaml  311-conda.yaml  312-conda.yaml  313-conda.yaml  314-conda.yaml  36-conda.yaml  37-conda.yaml  38-conda.yaml  39-conda.yaml  benchmarks.yaml  check_version.py  r5py-conda.yaml  smoke_test.py
docs/: basics.ipynb  benchmarking.ipynb  changelog.rst  citation.rst  conf.py  contributions.rst  custom_filter.ipynb  customized_queries.ipynb  downloading_data.ipynb  environment.yml  faq.md  generate_ny_buildings_map.py  graphs.ipynb  index.rst  installation.ipynb  osm_tags.ipynb  quickstart.ipynb  reading_osm_data.ipynb  reference.rst  requirements.txt  saving_and_cropping.ipynb  tags_and_columns.ipynb
proto/: fileformat.proto  osmformat.proto
pyrosm/: __init__.py  _arrays.pxd  _arrays.pyx  _simplify_walk.pyx  boundary.py  buildings.pxd  buildings.py  buildings.pyx  c_arrays.pxd  c_arrays.pyx  data_filter.pxd  data_filter.pyx  data_manager.pxd  data_manager.pyx  delta_compression.pxd  delta_compression.pyx  distance.py  filter_compiler.py  frames.pxd  frames.pyx  geometry.pxd  geometry.pyx  graph_connectivity.py  graph_export.pxd  graph_export.pyx  graph_simplify.py  graphs.py  (+28 more)
(+88 files in other folders)
