[build-system]
requires = ["setuptools", "wheel", "Cython", "cykhash>=2"]

[tool.black]
force-exclude = '.*_pb2\.py$'

[tool.cibuildwheel]
# CPython 3.10–3.14, matching python_requires and the test matrix. PyPy is
# excluded (the build targets CPython); musllinux, 32-bit and win32 are skipped.
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *_i686 *-win32"
build-frontend = "build"
# Import the freshly built wheel and parse the bundled extract end to end.
test-command = "python {project}/ci/smoke_test.py"

[tool.cibuildwheel.macos]
# Intel (macos-13) runners are retired, so build both macOS architectures on the
# arm64 runner: arm64 natively, x86_64 cross-compiled. cibuildwheel runs the
# test-command only on the native (arm64) slice and skips it for x86_64.
archs = ["x86_64", "arm64"]
